--- a/CarBo/Info.plist
+++ b/CarBo/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.7</string>
+	<string>1.1.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -28,7 +28,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>8</string>
+	<string>16</string>
 	<key>FacebookAppID</key>
 	<string>1073886146033542</string>
 	<key>FacebookDisplayName</key>
@@ -50,7 +50,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Required for taking photo for document upload.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Uses Your Photo library for photo upload.</string>
+	<string>Required for photo upload for information.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
